# playground-annotate-snippets

./: Cargo.toml  README.md
examples/: cursor.rs  easy.rs
src/: cursor.rs  lib.rs  main.rs
